fix content container overflow

--- a/src/pages/common.less
+++ b/src/pages/common.less
@@ -8,9 +8,11 @@
 
 // container
 .container {
+    width: 100%;
     min-height: 100%;
     box-sizing: border-box;
     position: relative;
+    overflow: auto;
 }
 
 .container.inner {
